# aoc23

./: README.md
dotnet/: dotnet.sln
dotnet/Aoc23NET/: Aoc23NET.csproj  Program.cs
dotnet/Cs/: Cs.csproj  Day1.cs
dotnet/Framework/: Day.cs
dotnet/Fs/: Day2.fs  Day3.fs  Fs.fsproj  Utils.fs
haskell/: day3.hs
mathematica/: day24 part 2.nb
rust/: Cargo.toml  leaderboard_file.rs
rust/day22-anim/: Cargo.toml
rust/day22-anim/src/: main.rs  parser.rs
rust/src/: day1.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day24_shader.glsl  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  parsers.rs  utils.rs
uiua/: day11.ua  day18.ua
zig/: build.zig
zig/src/: day1.zig  day10.zig  day14.zig  day15.zig  main.zig  utils.zig
