[package]
name = "aoc23rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "day22-anim"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
bitvec = "1.0.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
derivative = "2.2.0"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
once_cell = "1.18.0"
paste = "1.0.14"
pollster = "0.3.0"
priority-queue = "1.3.2"
rayon = "1.8.0"
smallvec = "1.11.2"
wgpu = { version = "0.18.0", features = ["spirv", "glsl", "naga"] }
