[package]
name = "day22-anim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_rapier3d = "0.23.0"
itertools = "0.12.0"
nom = "7.1.3"
rand = "0.8.5"
